--- a/style.css
+++ b/style.css
@@ -1,33 +1,45 @@
 /*----------
          top-1 style section
               ------------*/
+              body{
+               font-family: 'Poppins', sans-serif;
+              }
+              main{
+               max-width: 1200px;
+               margin: 0 auto;
+              }
     .container{
 
-        width: 100%;
-padding: 20px;
+        width:100%;
+
         color: white;
            justify-content: center;
         align-items: center;
+        border: 2px solid cornflowerblue;
+        margin: 50px 0;
     }
     .top-1{ 
-        width: 95%;
+        width: fit-content;
         background-color: black;
         display: flex;
         align-content: center;
         justify-content: center;
+   
      
-      padding: 20px;
+      padding: 0 20px;
      } 
      h1{
         font-size: 40px;
      }
      .top-1-blog{
-        width: 50%;
+        width:50%;
         align-items: center;
+        margin-right: 20px;
      }   
      .top-1-image{
         display: flex;
         justify-content: baseline;
+        padding: 0px;
      } 
 
      .live-link{
@@ -54,15 +66,20 @@ padding: 20px;
         top 2 section style start
             ---------------------*/
             .top-2{
+               width: 100%;
                 display: flex;
-                width: 90%;
+                width: fit-content;
+                margin-top: 20px;
+                border: 2px solid darkmagenta;
+                padding: 10px;
+                color: black;
             }
             .summary-item
             {
                 
                 background-color: rgb(107, 57, 57);
-                width:25%;
-               height: fit-content;
+                width:fit-content;
+               height:500px;
                 padding: 10px 20px;
                 height: 130px;
                 display: flex;
@@ -84,6 +101,8 @@ padding: 20px;
 
             }
             .upcoming , .group-page , .blog-page {
+                width: 200px;
+                height: 64px;
                 margin: 5px 0;
                 padding: 10px 10px;
                 background-color: azure;
@@ -98,29 +117,68 @@ padding: 20px;
             font-size: 20px;
            }
             .blogs{
-                width:100%;
+                width:95%;
                 margin-left: 20px;
                 background-color: aqua;
                 display: grid;
                 grid-template-columns: repeat(3,1fr);
+                border:2px solid red
             }
             .blog img {
-            width: 70%;
+            width: 100%;
             }
             .transfer a {
                 background-color: aliceblue;
                 padding: 5px;
+                border: 1px solid;
             }
             .blog{
-               
+               background-color: whitesmoke;
                 margin: 10px;
                 padding: 10px;
                border:2px solid ;
                border-radius: 10px 10px 10px 10px;
-             width: 312px;
+             width: 250px;
              height: 365px;
             }
          .time-section span{
             display: flex;
             flex-direction: row-reverse;
+         }
+
+
+         footer{
+            align-items: center;
+            background-color: rgb(121, 21, 21);
+            color: white;
+           
+         }
+         .footer-section{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+             height: 444px;
+         }
+         hr{
+            width: 1000px;
+            border:.1px solid #ffffff21;
+            margin-top: 30px;
+            margin-bottom: 30px;
+         }
+        
+  
+         .footer-head{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+         }
+
+         .support-link{
+            margin-top: 20px;
+         }
+         .support-link a{
+            padding-top: 30px;
+            margin: 20px;
+            color: chartreuse;
          }
