--- a/style.css
+++ b/style.css
@@ -161,6 +161,9 @@
             flex-direction: row-reverse;
          }
 
+         /*-------------
+                    footer-section
+                           --------------*/
 
          footer{
             align-items: center;
